project('SixteenthChapter', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3',
                     'cpp_std=c++14'])
subdir('src/')
exe = executable('c16p1', sources,
  install : true)
exe = executable('c16p4', sources1,
  install : true)
exe = executable('c16p5', sources2,
  install : true)
exe = executable('c16p6', sources3,
  install : true)
exe = executable('c16p7', sources4,
  install : true)
exe = executable('c16p8', sources5,
  install : true)
exe = executable('c16p9', sources6,
  install : true)
exe = executable('c16p10', sources7,
  install : true)
exe = executable('c16p11', sources8,
  install : true)
exe = executable('cppMan', sources9,
  install : true)
test('basic', exe)
