project('CompoundTypesEnumsAndStructs', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3',
                     'cpp_std=c++20'])
subdir('src/')
exe = executable('c10p1', sources,
  install : true)
exe = executable('c10p3', sources1,
  install : true)
exe = executable('c10p4', sources2,
  install : true)
exe = executable('c10p5', sources3,
  install : true)
exe = executable('c10p8', sources4,
  install : true)
exe = executable('c10p9', sources5,
  install : true)
exe = executable('c10p10', sources6,
  install : true)
exe = executable('c10px', sources7,
  install : true)
exe = executable('c10py', sources8,
  install : true)









test('basic', exe)
