project('TwelvethChapter', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3',
                     'cpp_std=c++20'])
subdir('src/')
exe = executable('c12p1', sources,
  install : true)
exe = executable('c12q1', sources1,
  install : true)
exe = executable('c12p2', sources2,
  install : true)
exe = executable('c12p3', sources3,
  install : true)
exe = executable('c12p4', sources4,
  install : true)
exe = executable('c12p5', sources5,
  install : true)
exe = executable('c12p6', sources6,
  install : true)
exe = executable('c12p7', sources7,
  install : true)
test('basic', exe)
