sources = files('c11p1.cpp')
sources1 = files('c11p2.cpp')
sources2 = files('c11p3.cpp')
sources3 = files('c11p4.cpp')
sources4 = files('c11p5.cpp')
sources5 = files('c11p7.cpp')
sources6 = files('c11p8.cpp')
sources7 = files('c11p9.cpp')
sources8 = files('c11p10.cpp')
sources9 = files('c11p11.cpp')
sources9q = files('c11p11q.cpp')
sources10 = files('c11p13.cpp')
sources11 = files('c11p14.cpp')
sources12 = files('c11p16.cpp')
sources13 = files('c11p17.cpp')
sources14 = files('c11p18.cpp')
sources15 = files('c11p19.cpp')

