sources = files('c16p1.cpp')
sources1 = files('c16p4.cpp')
sources2 = files('c16p5.cpp')
sources3 = files('c16p6.cpp')
sources4 = files('c16p7.cpp')
sources5 = files('c16p8.cpp')
sources6 = files('c16p9.cpp')
sources7 = files('c16p10.cpp')
sources8 = files('c16p11.cpp')
sources9 = files('cppMan.cpp')